--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
    </tr>
    
    <tr>
-       <td> Task1</td>
+       <td> Create repositry </td>
        <td> Done </td>
    </tr>
    <tr>
-       <td>Task2</td>
+       <td>Add a README file</td>
        <td>Done</td>
    </tr>
    <tr>
-       <td>Task3</td>
+       <td>Clone repositry  </td>
        <td>Done</td>
    </tr>
 </table>
